# CDP-for-CPP

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  BUILD.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
cmake/: CDPLibConfig.cmake.in  Version.hpp.in
docs/: browser-api.md  core.md  domains.md  error-handling.md  examples.md  highlevel-api.md  index.md  quick-start.md
examples/: comprehensive_test.cpp  highlevel_test.cpp  main.cpp  torture_test.cpp
examples/test_extension/: background.js  content.css  content.js  manifest.json
include/cdp/: CDP.hpp
include/cdp/browser/: ChromeLauncher.hpp  ExtensionLoader.hpp  QuickStart.hpp
include/cdp/core/: Base64.hpp  Enums.hpp  Json.hpp  Logger.hpp  SHA1.hpp  TypedResponses.hpp
include/cdp/domains/: Accessibility.hpp  Animation.hpp  Audits.hpp  Autofill.hpp  BackgroundService.hpp  BaseDomain.hpp  BluetoothEmulation.hpp  Browser.hpp  BrowserDomain.hpp  CSS.hpp  CacheStorage.hpp  Cast.hpp  Console.hpp  ConsoleDomain.hpp  DOM.hpp  DOMDebugger.hpp  DOMDomain.hpp  DOMSnapshot.hpp  DOMStorage.hpp  Debugger.hpp  DebuggerDomain.hpp  DeviceAccess.hpp  DeviceOrientation.hpp  Domain.hpp  Emulation.hpp  EmulationDomain.hpp  EventBreakpoints.hpp  Extensions.hpp  FedCm.hpp  Fetch.hpp  FileSystem.hpp  HeadlessExperimental.hpp  HeapProfiler.hpp  IO.hpp  IndexedDB.hpp  Input.hpp  InputDomain.hpp  Inspector.hpp  LayerTree.hpp  Log.hpp  (+24 more)
include/cdp/highlevel/: Async.hpp  Browser.hpp  ElementHandle.hpp  Frame.hpp  InputHelpers.hpp  NetworkInterceptor.hpp  Page.hpp  Result.hpp  ThreadSafe.hpp  Utilities.hpp  WaitCombinators.hpp
include/cdp/net/: HttpClient.hpp  Socket.hpp  WebSocket.hpp  Winsock.hpp
include/cdp/protocol/: CDPClient.hpp  CDPConnection.hpp  CommandPipeline.hpp
src/browser/: ChromeLauncher.cpp  ChromeLauncher_posix.cpp  QuickStart.cpp
src/core/: Base64.cpp  Json.cpp  SHA1.cpp
src/domains/: BrowserDomain.cpp  ConsoleDomain.cpp  DOMDomain.cpp  DebuggerDomain.cpp  EmulationDomain.cpp  InputDomain.cpp  NetworkDomain.cpp  PageDomain.cpp  RuntimeDomain.cpp  TargetDomain.cpp
src/highlevel/: Browser.cpp  ElementHandle.cpp  NetworkInterceptor.cpp  Page.cpp
src/net/: HttpClient.cpp  Socket_posix.cpp  Socket_win32.cpp  WebSocket.cpp  Winsock.cpp
src/protocol/: CDPClient.cpp  CDPConnection.cpp
tools/add_extension/: CMakeLists.txt  base64.hpp  extension_id.hpp  hmac.hpp  json.hpp  main.cpp  platform.hpp  secure_preferences.hpp  sha256.hpp
